--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
+body  {background-color: #3399cc;
+  color: #dddddd;
+  font-family: Georgia, Times New Roman, sans-serif;
+  margin: 10% 20%;
+}
 
+.exp-header { text-align: center;
+  margin: 1px (0.5);
+  text-transform: uppercase;
+  border-top: 1px solid #dddd; 
+  border-bottom: 1px solid #dddd;
+  background-color: rgba(21, 23, 66);
+}
