--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body  {background-color: #3399cc;
 }
 
 .exp-header { text-align: center;
-  margin: 1px (0.5);
+  m
   text-transform: uppercase;
   border-top: 1px solid #dddd; 
   border-bottom: 1px solid #dddd;
