--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@ body  {background-color: #3399cc;
   margin: 10% 20%;
 }
 
-.exp-header { text-align: center;
-  m
+.exp-header { text-align: center;m
   text-transform: uppercase;
   border-top: 1px solid #dddd; 
   border-bottom: 1px solid #dddd;
